@@ -15,10 +15,7 @@ ullfp1_SOURCES =	ullfp1.cc
 ullfptab1_SOURCES =	ullfptab1.cc
 
 # If your test programs includes header from the source tree:
-AM_CPPFLAGS =		-I $(top_srcdir)		\
-			-I $(top_srcdir)/src		\
-			-I $(top_srcdir)/libport	\
-			-I $(top_srcdir)/libport/tests
+AM_CPPFLAGS =		-I $(top_builddir)
 
 # List your tests here:
 TESTS =							\
@@ -29,14 +26,15 @@ TESTS =							\
 			ullfp1.test			\
 			ullfptab1.test
 
-check-am: config.h
-
-config.h: $(top_srcdir)/src/config.h
-	sed  -e '/URBI_UFLOAT/d' $< > $@
+BUILT_SOURCES = config.h
+# Do not define the variety of ufloats to use.
+config.h: $(top_builddir)/libport/config.h
+	sed -e '/URBI_UFLOAT/d' $< > $@.t
+	mv $@.t $@
 
 $(TESTS):
 	for i in $(TESTS); do \
-          $(LN_S) -f $(top_srcdir)/build-aux/test.sh $$i || exit 1; \
+          $(LN_S) -f $(top_builddir)/build-aux/test.sh $$i || exit 1; \
         done
 
 EXTRA_DIST = $(TESTS:.test=.stdout) $(top_srcdir)/build-aux/test.sh \
